<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".MainActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/textsi"
            app:startIconDrawable="@drawable/ic_baseline_format_list_numbered_24">

            <AutoCompleteTextView
                android:id="@+id/spinner"
                android:inputType="none"
                android:layout_width="235dp"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Up"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:onClick="onclick"
            android:text="Cambio"
            app:cornerRadius="20dp" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Texto"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperText="Puedes ingresar cualquier caracter"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_sort_by_alpha_24">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/po"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperText="Ingresa un numero de población"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_baseline_confirmation_number_24">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:enabled="false"
            android:id="@+id/po"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Checar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onclick"
        android:text="@string/Calcu"
        app:cornerRadius="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:id="@+id/dos"
            android:textColor="@color/black"
            android:text="Cadenas Random"
            android:autoSizeTextType="uniform"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uno"
            android:textColor="@color/black"
            android:enabled="false"
            android:inputType="number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="Aptitud"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res3"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:inputType="number"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res5"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:text=""
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:enabled="false"
            android:inputType="number"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/res10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:enabled="false"
            android:inputType="number"
            android:text=""
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    </LinearLayout>

    <Button
        android:id="@+id/Siguiente"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_24"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onclick"
        android:text="@string/Next"
        app:cornerRadius="20dp" />



</LinearLayout>
